<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/Register_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/SmileTextViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/SmileTextViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/SmileTextViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd_again"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_pwd_again"
            style="@style/Register_Edit"
            android:layout_gravity="center_vertical"
            android:hint="@string/login_email_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/SmileTextViewBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
            android:layout_gravity="center_vertical"
            android:hint="@string/login_email_address" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>